feature: add `Ctrl+Enter/⌘+Enter` hotkey to submit conventional commit (#874)

--- a/src/Views/ConventionalCommitMessageBuilder.axaml
+++ b/src/Views/ConventionalCommitMessageBuilder.axaml
@@ -133,6 +133,10 @@
             Margin="0,8,0,16"
             HorizontalAlignment="Center"
             Content="{DynamicResource Text.Sure}"
-            Click="OnApplyClicked"/>
+            Click="OnApplyClicked"
+            HotKey="{OnPlatform Ctrl+Enter, macOS=⌘+Enter}"
+            ToolTip.Tip="{OnPlatform Ctrl+Enter, macOS=⌘+Enter}"
+            ToolTip.Placement="Top"
+            ToolTip.VerticalOffset="0"/>
   </Grid>
 </v:ChromelessWindow>
