--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -255,7 +255,7 @@
             <TextBlock Classes="tab_header" Text="{DynamicResource Text.Preference.Git}"/>
           </TabItem.Header>
 
-          <Grid Margin="8" RowDefinitions="32,32,32,32,32" ColumnDefinitions="Auto,*">
+          <Grid Margin="8" RowDefinitions="32,32,32,32,32,32" ColumnDefinitions="Auto,*">
             <TextBlock Grid.Row="0" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Git.Path}"
                        HorizontalAlignment="Right"
@@ -326,6 +326,11 @@
                 </DataTemplate>
               </ComboBox.ItemTemplate>
             </ComboBox>
+
+            <CheckBox Grid.Row="5" Grid.Column="1"
+                      Height="32"
+                      Content="{DynamicResource Text.Preference.Git.SSLVerify}"
+                      IsChecked="{Binding #ThisControl.EnableHTTPSSLVerify, Mode=TwoWay}"/>
           </Grid>
         </TabItem>
 
