--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -478,6 +478,7 @@
   <x:String x:Key="Text.Preference.Git.Email" xml:space="preserve">電子郵件</x:String>
   <x:String x:Key="Text.Preference.Git.Email.Placeholder" xml:space="preserve">預設 Git 使用者電子郵件</x:String>
   <x:String x:Key="Text.Preference.Git.Path" xml:space="preserve">安裝路徑</x:String>
+  <x:String x:Key="Text.Preference.Git.SSLVerify" xml:space="preserve">啟用 HTTP SSL 驗證</x:String>
   <x:String x:Key="Text.Preference.Git.User" xml:space="preserve">使用者名稱</x:String>
   <x:String x:Key="Text.Preference.Git.User.Placeholder" xml:space="preserve">預設 Git 使用者名稱</x:String>
   <x:String x:Key="Text.Preference.Git.Version" xml:space="preserve">Git 版本</x:String>
